refactor: database - fixed events